--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,9 +1,18 @@
 @import "./FontSizes.css";
 
+.hidden {
+  display: none !important;
+}
+
+.visible {
+  display: block;
+  animation: fade-in linear 0.5s 1 normal forwards !important;
+}
+
 .HeaderTag {
   position: sticky;
   top: 40px;
-  z-index: 1;
+  z-index: 99;
 
   @media (max-width: 450px) {
     padding: 0px 15px;
@@ -37,7 +46,7 @@
 
 .ButtonWrapper {
   display: grid;
-  grid-template-columns: 145px 145px;
+  grid-template-columns: auto auto;
   gap: 12px;
 
   @media (max-width: 450px) {
@@ -46,42 +55,6 @@
   @media (max-width: 768px) {
     display: none;
   }
-}
-
-.SimpleButton {
-  margin-left: 60px;
-  width: 145px;
-  height: 41px;
-  padding: 7px;
-  background: transparent;
-  border: 1px solid rgba(0, 0, 0, 0.13);
-  border-radius: 50px;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  margin: 0 auto;
-  transition: 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-.SimpleButton:hover {
-  border: 1px solid rgba(0, 0, 0, 0.99);
-}
-
-.Button {
-  width: 145px;
-  height: 41px;
-  padding: 7px;
-  background: #ea2d49;
-  border-radius: 50px;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  margin: 0 auto;
-  transition: 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-.Button:hover {
-  background: #da2742;
 }
 
 .Hamburger {
@@ -103,19 +76,8 @@
   transform: scale(1.1);
 }
 
-.SimpleName {
-  font-size: 20px;
-  color: rgba(0, 0, 0, 0.4);
-  font-weight: 250;
-  transition: 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-.SimpleButton:hover .SimpleName {
-  color: rgba(0, 0, 0, 0.99);
-}
-
-.ButtonName {
-  font-size: 20px;
-  color: white;
-  font-weight: 250;
+.SVGUser {
+  width: 38px;
+  height: 38px;
+  stroke: red !important;
 }
