--- a/styles/components/SignUp.module.css
+++ b/styles/components/SignUp.module.css
@@ -1,5 +1,5 @@
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .visible {
@@ -25,7 +25,7 @@
   backdrop-filter: blur(15px);
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 100;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
@@ -44,6 +44,30 @@
   padding: 0px 20px;
 }
 
+.warning {
+  position: absolute;
+  top: calc(50% - (457px + 55px) / 2);
+  left: calc(50%);
+  height: auto;
+  width: 300px;
+  padding: 10px 10px;
+  z-index: 2;
+  backdrop-filter: blur(40px);
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  display: grid;
+  grid-template-columns: 35px auto;
+  gap: 10px;
+  align-items: center;
+  border-radius: 100px;
+}
+
+.SVGCrossRed {
+  stroke: #ea2d49;
+  width: 35px;
+  height: 35px;
+}
+
 .ContentWrapper {
   display: grid;
   grid-template-columns: auto auto;
@@ -59,12 +83,18 @@
 .SignUpWrapper {
   display: grid;
   grid-template-rows: repeat(8, auto);
-  align-content: center;
+  align-content: end;
   gap: 18px;
   width: 300px;
 }
 
-.SignUpWrapper input[type="text"] {
+.forms {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  gap: 15px;
+}
+
+.SignUpWrapper input[type="password"] {
   height: 40px;
   text-indent: 20px;
   border-radius: 10px;
@@ -74,7 +104,58 @@
   font-size: 14px;
 }
 
-.SignUpWrapper input[type="text"]:focus {
+.SignUpWrapper input[type="email"] {
+  height: 40px;
+  text-indent: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.14);
+  border: 0px solid rgba(0, 0, 0, 0.14);
+  border-color: rgba(0, 0, 0, 0.14);
+  font-size: 14px;
+}
+
+.SignUpWrapper input[type="submit"] {
+  width: 100%;
+  height: 40px;
+  padding: 7px;
+  background: #ea2d49;
+  border: none;
+  border-radius: 10px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  margin: 0 auto;
+  transition: 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
+  font-size: 20px;
+  color: white;
+  font-weight: 250;
+}
+
+.SignUpWrapper input[type="submit"]:hover {
+  box-shadow: rgba(234, 45, 73, 0.004) 0px 0.783403px 0.783403px 0px,
+    rgba(234, 45, 73, 0.01) 0px 1.92107px 1.92107px 0px,
+    rgba(234, 45, 73, 0.024) 0px 3.63429px 3.63429px 0px,
+    rgba(234, 45, 73, 0.04) 0px 6.35486px 6.35486px 0px,
+    rgba(234, 45, 73, 0.07) 0px 11.0474px 11.0474px 0px,
+    rgba(234, 45, 73, 0.125) 0px 5.249729px 5.249729px 0px,
+    rgba(234, 45, 73, 0.2) 0px 10px 10px 0px;
+}
+
+.SignUpWrapper input[type="password"]:focus {
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 0 1px #ea2d49,
+    rgba(234, 45, 73, 0.004) 0px 0.783403px 0.783403px 0px,
+    rgba(234, 45, 73, 0.01) 0px 1.92107px 1.92107px 0px,
+    rgba(234, 45, 73, 0.024) 0px 3.63429px 3.63429px 0px,
+    rgba(234, 45, 73, 0.04) 0px 6.35486px 6.35486px 0px,
+    rgba(234, 45, 73, 0.07) 0px 11.0474px 11.0474px 0px,
+    rgba(234, 45, 73, 0.125) 0px 5.249729px 5.249729px 0px;
+  outline: none;
+  transition: 0.1s;
+}
+
+.SignUpWrapper input[type="email"]:focus {
   border: none;
   border-radius: 10px;
   box-shadow: 0 0 0 1px #ea2d49,
