--- a/styles/components/SignUp.module.css
+++ b/styles/components/SignUp.module.css
@@ -31,10 +31,13 @@
 
 .Wrapper {
   position: absolute;
-  top: calc(50% - 457px / 2);
-  left: calc(50% - 767px / 2);
-  width: 767px;
-  height: 457px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: min(100% - 20px, 767px);
+  height: min(100%, 457px);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(40px);
   background-color: rgba(255, 255, 255, 0.5);
@@ -49,7 +52,8 @@
   top: calc(50% - (457px + 55px) / 2);
   left: calc(50%);
   height: auto;
-  width: 300px;
+  max-width: 300px;
+  width: 80%;
   padding: 10px 10px;
   z-index: 2;
   backdrop-filter: blur(40px);
@@ -85,7 +89,26 @@
   grid-template-rows: repeat(8, auto);
   align-content: end;
   gap: 18px;
-  width: 300px;
+  max-width: 300px;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .Image {
+    display: none;
+  }
+  .ContentWrapper {
+    grid-template-columns: auto;
+  }
+  .Wrapper {
+    justify-content: center;
+  }
+  .warning {
+    left: calc(0%);
+    margin-left: 15px;
+  }
+  .SignUpWrapper {
+    margin-top: 15%;
+  }
 }
 
 .forms {
