--- a/styles/components/BGApp/BGApp.module.css
+++ b/styles/components/BGApp/BGApp.module.css
@@ -1,15 +1,28 @@
+.hidden {
+  display: none !important;
+}
+
+.visible {
+  display: block;
+}
 .Wrapper {
   background: #fff;
   overflow: hidden;
+  margin-top: 60px;
 }
 
 .ContentWrapper {
   max-width: 1234px;
   margin: 0 auto;
-  padding: 30px 10px;
+  padding: 30px 20px;
   display: grid;
   grid-template-rows: auto auto;
-  gap: 60px;
+  gap: 20px;
+}
+@media (max-width: 350px) {
+  .ContentWrapper {
+    padding: 30px 10px;
+  }
 }
 
 .TextWrapper {
@@ -17,8 +30,9 @@
   margin: 0 auto;
   display: grid;
   gap: 15px;
-
-  @media (max-width: 450px) {
+}
+@media (max-width: 450px) {
+  .TextWrapper {
     max-width: 370px;
   }
 }
@@ -28,9 +42,10 @@
   margin: 0 auto;
   font-weight: 600;
   font-size: 30px;
-
-  @media (max-width: 450px) {
-    font-size: calc(16.5px + (60 - 35) * ((100vw - 250px) / (1600 - 250)));
+}
+@media (max-width: 450px) {
+  .Title {
+    font-size: clamp(15px, 1.6vw, 35px);
   }
 }
 
@@ -42,19 +57,32 @@
   margin: 0 auto;
   line-height: 110%;
   text-align: center;
-
-  @media (max-width: 450px) {
-    font-size: calc(12.5px + (40 - 35) * ((100vw - 250px) / (1600 - 250)));
+}
+@media (max-width: 450px) {
+  .Description {
+    font-size: clamp(13px, 1.4vw, 35px);
   }
 }
 
 .Stack {
+  width: 100%;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 346px auto;
   justify-content: center;
   align-items: start;
   gap: 20px;
-  margin-bottom: -35px;
+}
+
+@media (max-width: 450px) {
+  .Stack {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 450px) {
+  .mobileOnly {
+    display: none !important;
+  }
 }
 
 .ToggleWrapper {
@@ -69,14 +97,16 @@
   border-radius: 16px;
   display: grid;
   grid-template-columns: auto auto;
-  justify-content: center;
   align-items: center;
+  max-width: 450px;
+  width: 100%;
+  height: 61px;
 }
 .glider {
   position: absolute;
   margin-left: 10px;
   background: #ea2d49;
-  width: 173px;
+  width: calc((100% / 2) - 10px);
   height: 41px;
   border-radius: 10px;
   transition: 0.25s ease-out;
@@ -91,7 +121,7 @@
 }
 
 .ToggleButton {
-  width: 173px;
+  max-width: 173px;
   height: 41px;
   border-radius: 50px;
   display: grid;
@@ -134,19 +164,23 @@
 }
 
 .BoxWrapper {
-  border: 1px solid rgba(0, 0, 0, 0.19);
+  background-color: rgba(245, 245, 245, 0.8);
+  box-shadow: 0px 3px 30px 0px rgba(0, 0, 0, 0.1);
   border-radius: 19px;
-  width: 1018px;
+  width: 100%;
   min-height: 515px;
-  margin: 0 auto;
+  margin: 40px 0px;
   display: grid;
+}
 
-  @media (max-width: 1018px) {
+@media (max-width: 450px) {
+  .BoxWrapper {
+    min-height: 83px;
   }
 }
 
 .AddedImages {
-  max-width: 1018px;
+  max-width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
@@ -157,6 +191,7 @@
 }
 
 .ImageBorder {
+  padding: 3px !important;
   border: 1px solid rgba(0, 0, 0, 0.19);
   border-radius: 15px;
   margin: 20px 0 0 20px;
@@ -182,7 +217,7 @@
 .ImageBorder::after {
   content: "";
   position: absolute;
-  inset: 5px;
+  inset: 3px;
   border-radius: 15px;
 }
 
@@ -222,12 +257,65 @@
 .CrossButton:hover {
   transform: rotate(-88deg);
 }
+@media (max-width: 450px) {
+  .AddedImages {
+    max-width: 1018px;
+    display: grid;
+    padding: 10px;
+  }
+  .Image {
+    height: auto;
+    width: 100%;
+  }
+  .ImageBorder {
+    margin: 0px;
+    margin-top: 10px !important;
+  }
+  .CrossButton {
+    top: 20px;
+  }
+}
 
 .SVGCross {
   fill: #868686;
   width: 21px;
   height: 21px;
   transform: rotate(-44deg);
+}
+
+.AddImagesMobile {
+  width: 151px;
+  height: 38px;
+  background: #ea2d49;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  gap: 5px;
+  margin: 40px auto;
+  transition: 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.AddImagesMobile:hover {
+  box-shadow: rgba(234, 45, 73, 0.004) 0px 0.783403px 0.783403px 0px,
+    rgba(234, 45, 73, 0.01) 0px 1.92107px 1.92107px 0px,
+    rgba(234, 45, 73, 0.024) 0px 3.63429px 3.63429px 0px,
+    rgba(234, 45, 73, 0.04) 0px 6.35486px 6.35486px 0px,
+    rgba(234, 45, 73, 0.07) 0px 11.0474px 11.0474px 0px,
+    rgba(234, 45, 73, 0.125) 0px 5.249729px 5.249729px 0px,
+    rgba(234, 45, 73, 0.2) 0px 10px 10px 0px;
+}
+@media only screen and (min-width: 450px) {
+  .AddImagesMobile {
+    display: none;
+  }
+}
+
+.SVGPlusImgMobile {
+  fill: white;
+  width: 17px;
 }
 
 .AddImages {
@@ -240,6 +328,11 @@
   grid-template-rows: repeat(3, auto);
   justify-content: center;
   align-content: center;
+}
+@media (max-width: 450px) {
+  .AddImages {
+    display: none;
+  }
 }
 
 .AddImages:hover {
@@ -295,4 +388,10 @@
   justify-content: right;
   align-content: flex-end;
   padding: 30px 30px;
+}
+
+@media (max-width: 450px) {
+  .ButtonWrapper {
+    display: none;
+  }
 }
