--- a/styles/components/IntroSection/Square.module.css
+++ b/styles/components/IntroSection/Square.module.css
@@ -1,68 +1,39 @@
 .Wrapper {
-  max-width: 1018px;
-  min-height: 332px;
-  padding: 17px 120px;
-  margin-top: 30px;
+  max-width: 490px;
+  min-height: auto;
+  padding: 30px 10px;
   background: #f5f5f5;
   border-radius: 19px;
-
-  @media (max-width: 1018px) {
-    display: block;
-    max-width: 490px;
-    min-height: 490px;
-    padding: 12px;
-  }
 }
 
 .ContentWrapper {
   display: grid;
-  grid-template-columns: 254px auto;
-  gap: 70px;
-  align-items: center;
-
-  @media (max-width: 1018px) {
-    display: grid;
-    grid-template-columns: auto;
-    gap: 17px;
-  }
+  gap: 20px;
 }
 
 .Image {
   max-width: 254px;
-  height: 291.9px;
+  margin: 0 auto;
   transition: 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
-
-  @media (max-width: 1018px) {
-    margin: 0 auto;
-  }
 }
 
 .Image:hover {
   transform: translateY(-10px);
 }
 
-.HoriWrapper {
-  display: grid;
-  gap: 20px;
-}
-
 .Title {
-  margin: 0 auto;
-  text-align: center;
   font-weight: 600;
-  font-size: 20px;
-
-  @media (max-width: 450px) {
-    font-size: calc(16.5px + (60 - 35) * ((100vw - 250px) / (1600 - 250)));
-  }
+  font-size: clamp(15px, 1.6vw, 35px);
+  margin: 0 auto;
 }
 
 .Subtitle {
   margin: 0 auto;
   text-align: center;
-  color: rgba(0, 0, 0, 0.74);
-  font-size: 15px;
+  font-size: clamp(13px, 1.4vw, 35px);
+  max-width: 95%;
   line-height: 140%;
+  color: rgba(0, 0, 0, 0.74);
 }
 
 .Button {
@@ -86,7 +57,7 @@
 }
 
 .ButtonName {
+  font-size: 20px;
   color: white;
   font-weight: 250;
-  font-size: 20px;
 }
