--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,8 +1,8 @@
 .Wrapper {
-  background: #f5f5f5;
+  background-color: rgba(245, 245, 245, 0.8);
   display: grid;
   grid-template-columns: auto auto auto auto;
-  gap: 30px;
+  gap: 70px;
   max-width: 1018px;
   border-radius: 19px;
   padding: 40px 10px;
@@ -11,17 +11,19 @@
   margin: 0 auto;
   align-items: center;
   justify-content: center;
-
-  @media (max-width: 1018px) {
+}
+@media (max-width: 1018px) {
+  .Wrapper {
     grid-template-columns: auto auto;
     gap: 30px;
   }
-  @media (max-width: 460px) {
+}
+@media (max-width: 460px) {
+  .Wrapper {
     grid-template-columns: auto;
     gap: 30px;
   }
 }
-
 .Description {
   text-align: justify;
   max-width: 250px;
