--- a/styles/SmallComponents/Buttons.module.css
+++ b/styles/SmallComponents/Buttons.module.css
@@ -81,6 +81,13 @@
     rgba(234, 45, 73, 0.2) 0px 10px 10px 0px;
 }
 
+.functionStack {
+  display: grid;
+  grid-template-columns: auto 61px;
+
+  gap: 10px;
+}
+
 .btnAnimated {
   background-color: rgba(245, 245, 245, 0.8);
   border-radius: 16px;
@@ -191,7 +198,8 @@
   gap: 10px;
 }
 @media only screen and (min-width: 450px) {
-  .HStackBtn {
+  .HStackBtn,
+  .functionStack {
     display: none;
   }
 }
