--- a/styles/components/IntroSection/Rectangle.module.css
+++ b/styles/components/IntroSection/Rectangle.module.css
@@ -3,7 +3,7 @@
   min-height: auto;
   padding: 30px 120px;
   margin-top: 30px;
-  background: #f5f5f5;
+  background-color: rgba(245, 245, 245, 0.8);
   border-radius: 19px;
 }
 @media (max-width: 1018px) {
