--- a/styles/components/IntroSection/Square.module.css
+++ b/styles/components/IntroSection/Square.module.css
@@ -2,7 +2,7 @@
   max-width: 490px;
   min-height: auto;
   padding: 30px 10px;
-  background: #f5f5f5;
+  background-color: rgba(245, 245, 245, 0.8);
   border-radius: 19px;
 }
 
