--- a/styles/SmallComponents/DropDown.module.css
+++ b/styles/SmallComponents/DropDown.module.css
@@ -32,11 +32,15 @@
 
 .DropArrow {
   position: absolute;
-  width: 15px;
-  height: 15px;
+  width: 12px;
+  height: 12px;
+  padding: 2px;
+  margin: 5px;
   right: 0;
   top: auto;
   bottom: 0;
+  background-color: #ea2d49;
+  border-radius: 50px;
   transform: rotate(180deg);
 }
 
