--- a/styles/components/SignUp.module.css
+++ b/styles/components/SignUp.module.css
@@ -124,6 +124,8 @@
   border: 0px solid rgba(0, 0, 0, 0.14);
   border-color: rgba(0, 0, 0, 0.14);
   font-size: 14px;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .SignUpWrapper input[type="email"] {
@@ -134,6 +136,8 @@
   border: 0px solid rgba(0, 0, 0, 0.14);
   border-color: rgba(0, 0, 0, 0.14);
   font-size: 14px;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .SignUpWrapper input[type="submit"] {
@@ -151,6 +155,8 @@
   font-size: 20px;
   color: white;
   font-weight: 250;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .SignUpWrapper input[type="submit"]:hover {
